Removed call to reset sound switcher on mode change.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ DisplayModeToggler/.vs/DisplayModeToggler/v17/
 DisplayModeToggler/DisplayModeToggler/bin/Release/
 
 DisplayModeToggler/DisplayModeToggler/bin/Debug/
+
+DisplayModeToggler/.vs/
